Updated Research Q, Hypothesis, Background & Prior Work, & Dataset sections

--- a/FinalProject_group046.ipynb
+++ b/FinalProject_group046.ipynb
@@ -39,11 +39,11 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
-    "- Hulk\n",
-    "- Iron Man\n",
-    "- Thor\n",
-    "- Wasp"
+    "- Sharon Chen\n",
+    "- Pamela Ghag\n",
+    "- Yuzi Chu\n",
+    "- Cheng Chang\n",
+    "- Stanley Hahm"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your research question here*"
+    "Are there significant differences among courses under the Humanities, Social Science, and STEM departments at UCSD in terms of correlation between course difficulty and teachers’ ratings given through UCSD's official student-feedback platform, CAPE?"
    ]
   },
   {
@@ -74,11 +74,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your background and prior work here* \n",
+    "Our interest in this question stems from the shared experience of using the university's official student-feedback platform, CAPE, to get a basic understanding of certain classes (e.g. how difficult any one can be) and the teaching style of a professor. CAPE allows students to give feedback and ratings to their education, while also informing the incoming class of students about how rigorous the workload can get for a particular course. Needless to say, students who observe these metrics can then get a broad overview of how a particular class could impact their educational experience for any relevant quarter at UCSD and thus decide whether or not to enroll. Given the potency of influence student feedback can have when it comes to how a particular course or instructor is perceived, it was especially important for us to study exactly which primary variables actually go into predicting whether or not a student is likely to recommend a particular professor, or at least grant him/her a favorable rating. \n",
     "\n",
-    "References (include links):\n",
-    "- 1)\n",
-    "- 2)"
+    "This topic has been previously discussed by researchers. In a paper jointly published by Justin Esarey and Natalie Valdes, entitled \"Unbiased, reliable, and valid student evaluations can still be unfair,\" the researchers used computational simulation \"to show that, under ideal circumstances, even careful and judicious use of SETs [student evaluations of teaching] to assess faculty can produce an unacceptably high error rate... a large difference in SET scores *fails* to reliably identify the best teacher in a pairwise comparison\"(1). The far-reaching implications of such biased outcomes are further highlighted in Colleen Flaherty’s blog on Inside Higher Ed, \"Study: Student evaluations of teaching are deeply flawed,\" as she indicates that the danger of such biased evaluations lays in the institution's heightened proclivity to \"punish\" professors marginalized by arbitrarily unfavorable ratings to teach unpopular courses (2).\n",
+    "\n",
+    "Therefore, understanding what factors impact instructors' ratings, as well as the possible biases present in such determinations are essential to both educators and students. With this in mind, we would like to investigate the question at a more micro-level, such that we are not simply looking for a correlation overall between course difficulty and instructors' rating, but rather we wish to compare the extent to which this correlation is held across different departments. To reiterate our question once more, we aim to ask: Are there significant differences among courses under the Humanities, Social Science, and STEM departments at UCSD in terms of correlation between course difficulty and teachers’ ratings given through UCSD's official student-feedback platform, CAPE? \n",
+    "\n",
+    "To arrive at an efficacious conclusion, we plan to compare the correlations between course difficulty and teachers' ratings for Humanities, Social Science, and STEM-focused courses. Using CAPE data, we intend to define course difficulty as the interaction between the average GPA received in a particular class and the number of hours spent studying for it. Likewise, we intend to determine teachers' ratings through the percentage of students who recommend the instructor for future iterations of a particular course (i.e. high percentage of recommendations = high rating; lower percentage of recommendations = low rating). \n",
+    "\n",
+    "With these metrics, our goal is to observe whether the correlation between course difficulty and teachers’ ratings holds constant across the Social Sciences, STEM, and Humanities departments, or if it is evaluated to be stronger/weaker for one department over another.\n",
+    "\n",
+    "As a first step, we hand-picked some field of studies offered at UCSD and listed them into three categories:\n",
+    "\n",
+    "__STEM__: Biology, Chemistry, Computer Science, Data Science, Mathematics, Physics, All Engineering;\n",
+    "\n",
+    "__Social Science__: Political Science, Sociology, Psychology, Cognitive Science, Economics; \n",
+    "\n",
+    "__Humanities__: Fine Arts, Literature, Language Studies, Theatre, Film, English, Philosophy, Visual Arts, History\n",
+    "\n",
+    "*NOTE: the list of courses representing each department at UCSD here are based on their designations within each department's website*\n",
+    "\n",
+    "References:\n",
+    "\n",
+    "(1) https://www.tandfonline.com/eprint/IMZDUUHTHCEDD4Q9VZYB/full?target=10.1080%2F02602938.2020.1724875&\n",
+    "\n",
+    "(2) https://www.insidehighered.com/news/2020/02/27/study-student-evaluations-teaching-are-deeply-flawed"
    ]
   },
   {
@@ -92,30 +112,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your hypotheses here*"
+    "We hypothesize that the professor rating will have a higher correlation with the difficulty level of the class for courses within the STEM department as opposed to those within the Humanities or Social Science departments."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dataset(s)"
+    "# Dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your dataset information here*\n",
+    "__Dataset Name__: CAPE\n",
     "\n",
-    "(Copy this information for each dataset)\n",
-    "- Dataset Name:\n",
-    "- Link to the dataset:\n",
-    "- Number of observations:\n",
+    "__Link to the dataset__: https://raw.githubusercontent.com/dcao/seascape/master/data/data.csv\n",
     "\n",
-    "1-2 sentences describing each dataset. \n",
+    "__Number of observations__: 51281 rows (pre-data cleaning)\n",
     "\n",
-    "If you plan to use multiple datasets, add 1-2 sentences about how you plan to combine these datasets."
+    "__Description__: The CAPE dataset includes information on the professor teaching the course; the course name itself; the quarter in which the course was taken; average GPA received by students; percentage of students that recommend the professor; average GPA expected by students; and the field of study the course is categorized under. The raw dataset includes observations from Fall Quarter 2007 up to and including Spring Quarter 2020.\n",
+    "\n",
+    "Each observation has the following columns:\n",
+    "\n",
+    "- instr: instructor name\n",
+    "\n",
+    "- course: course name\n",
+    "\n",
+    "- term: school term\n",
+    "\n",
+    "- enrolled: number of students enrolled\n",
+    "\n",
+    "- evals: number of students evaluated\n",
+    "\n",
+    "- recClass: percentage of students who recommend the class\n",
+    "\n",
+    "- __recInstr: percentage of students who recommend the instructor__\n",
+    "\n",
+    "- __hours: estimated hours spent per week to study for the course__\n",
+    "\n",
+    "- gpaExp: average GPA *expected* by the students \n",
+    "\n",
+    "- __gpaAvg: average GPA actually *received* by the students__\n",
+    "\n",
+    "We will be using gpaAvg and hours as our primary predictor variables in our multivariate model that aims to output values for our outcome variable, recInstr. This will effectively allow us to analyze the magnitude of correlation between course difficulty (indicated through gpaAvg and hours) and professor rating (indicated through recInstr) for each of the Humanities, Social Sciences, and STEM-focused departments. \n",
+    "\n",
+    "As we are measuring course difficulty in terms of average GPA (e.g higher average GPA = lower difficulty, lower average GPA = higher difficulty), we decided to remove any observations that contain a null value in the average GPA column, as they would not contribute to helping us reach a conclusion. We will also be dropping observations from Winter Quarter 2020 and Spring Quarter 2020, as classes during this period were taken during the pandemic, and it would not be an objective indication of the professors capabilities as a teacher due to the extreme and sudden modifications of teaching styles required during these times, as well as the overall challenges experienced by students in their personal lives as a result of the pandemic (e.g. debilitated mental health, family sickness/deaths, etc)."
    ]
   },
   {
@@ -241,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
