--- a/FinalProject_group046.ipynb
+++ b/FinalProject_group046.ipynb
@@ -1461,6 +1461,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The graph above shows the hours students say they spent on their classes. As you can see the hours spent in the STEM field (in green) spans from 2 hours all the way to 18 hours. However, students taking humanities and social science classes didn’t spend as much time as STEM students did. The majority of students who took social science classes indicated that they had spent between 4 to 7 hours. Similarly the majority of students who took humanities classes indicated the same. This indicates to us that students taking STEM classes dedicate more hours to those classes than students taking humanity and social sciences classes, this could potentially be a factor in the difficulty of the course. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -1489,6 +1496,13 @@
    "source": [
     "# generate comparative histograms of the three categories of courses in regard of GPA received\n",
     "sns.histplot(cape, x=\"gpa_rec\", hue=\"field\", element=\"step\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The histogram above shows the gpa received by students in each field of courses ( STEM, humanity and social science). As you can see the graph shows that the majority of students taking humanity classes (in blue) received a 4.0 gpa (meaning A+, approximately 500 students) whereas the majority of students taking STEM classes got approximately a 2.7 gpa (meaning a B-). The gpa received is a variable we are using to indicate the course difficulty. Therefore by the results shown above more students received lower grades in STEM classes in comparison to social science and humanities, so STEM classes are far more difficult."
    ]
   },
   {
@@ -1927,7 +1941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
