--- a/FinalProject_group046.ipynb
+++ b/FinalProject_group046.ipynb
@@ -2257,8 +2257,13 @@
    "source": [
     "We used data from CAPE in the public domain. The data is web-scraped by the Seascape team and put into a public GitHub repository under a MIT license. Therefore, we believe we have the permission to utilize the data.\n",
     "\n",
-    "In regards to privacy concerns towards the teachers that are evaluated in our data, we take steps to ensure that their names and the courses they teach remained anonymous we assigned them each an identification code.\n",
-    "\n"
+    "In regards to privacy concerns towards the teachers that are evaluated in our data, we took steps to ensure that their names and the courses they teach remained anonymous. We assigned them each an identification code.\n",
+    "\n",
+    "To ensure we don’t have a bias issue within our data we have taken into account the global pandemic, and acknowledge that teaching styles have changed dramatically as the majority of classes are currently taken online. Therefore, we decided to only examine data that was available before the pandemic (anything before Fall 2019).\n",
+    "\n",
+    "We have also considered that a review by a student could be dependent on their personal issues and not primarily due to the teacher conducting the course or even the course difficulty.\n",
+    "\n",
+    "We understand all these factors can cause bias in our analysis and will take these into account in our final write-up. Although we planned to use a wide range of data, we have tried to ensure we have minimal bias and privacy issues. We believe them to be transparent as we could acquire. Lastly, we don’t anticipate our findings to lead to any negative outcomes."
    ]
   },
   {
