--- a/FinalProject_group046.ipynb
+++ b/FinalProject_group046.ipynb
@@ -2372,7 +2372,7 @@
     "\n",
     "Another limitation to our study is that the report from __students are subjective in nature__, so they may not reflect the actual hours spent studying the course, or the actual rating of the instructors. In particular, __a extremely high portion of the courses reports 100% recommendation for the instructor__, which heavily skews the `rec_instr` data. This increases the difficulty of fitting the data in a linear model.\n",
     "\n",
-    "Nevertheless, this is a surprising result for us. It seems to suggest that __unlike what we have guessed, students at UCSD are generally not biased by the difficulty of the course when trying to evaluate the teaching performance of their instructors__. And that is a good thing."
+    "Nevertheless, this is a surprising result for us. It seems to suggest that __unlike what we have guessed, students at UCSD are generally not biased by the difficulty of the course when trying to evaluate the teaching performance of their instructors__. Provided that this is true, it is certainly a good thing to see."
    ]
   },
   {
