Team contribution for Tony & small edits

--- a/FinalProject_group046.ipynb
+++ b/FinalProject_group046.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CAPE at University of Califronia, San Diego is an anonymous online rating sytem for students to provide feedback to the instrutors and their courses. In this data analysis study, we try to look at the correlation between course difficulty and instructor ratings on CAPE, and whether this correlation is significantly different among courses in different fields of study (STEM, Social Science, and Humanities)."
+    "CAPE at University of Califronia, San Diego is an anonymous online rating sytem for students to provide feedback to the instrutors and their courses. In this data analysis study, we try to look at the correlation between course difficulty and instructor ratings on CAPE, and whether this correlation is significantly different among courses in different fields of study (STEM, Social Science, and Humanities). Against our expectations, our results show that course diffculty does not have a significant correlation with instructor rating, and that even if this correlation exits, STEM courses do not exhibit the highest correlation."
    ]
   },
   {
@@ -1997,7 +1997,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Core Analysis & Results"
+    "### Final Analysis & Results"
    ]
   },
   {
@@ -2344,7 +2344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We used data from CAPE in the public domain. The data is web-scraped by the Seascape team and put into a public GitHub repository under a MIT license. Therefore, we believe we have the permission to utilize the data.\n",
+    "We used data from CAPE in the public domain. The data is web-scraped by the Seascape team (David Cao and Tung Doan) and put onto a public GitHub repository under a MIT license. Therefore, we believe we have the permission to utilize the data.\n",
     "\n",
     "In regards to privacy concerns towards the teachers that are evaluated in our data, we took steps to ensure that their names and the courses they teach remained anonymous. We assigned them each an identification code.\n",
     "\n",
@@ -2386,7 +2386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Specify who in your group worked on which parts of the project.*"
+    "__Cheng (Tony) Chang__ helped establish research question and the (unfortunate) hypothesis. He conducted data cleaning, basic EDA, outlier rejections, and the final correlational analysis. He helped edit the brackground section and the descriptions of the graphs and regression summaries. He also wrote the overview and conclusions of the project."
    ]
   }
  ],
