--- a/FinalProject_group046.ipynb
+++ b/FinalProject_group046.ipynb
@@ -2348,11 +2348,11 @@
     "\n",
     "In regards to privacy concerns towards the teachers that are evaluated in our data, we took steps to ensure that their names and the courses they teach remained anonymous. We assigned them each an identification code.\n",
     "\n",
-    "To ensure we don’t have a bias issue within our data we have taken into account the global pandemic, and acknowledge that teaching styles have changed dramatically as the majority of classes are currently taken online. Therefore, we decided to only examine data that was available before the pandemic (anything before Fall 2019).\n",
+    "To ensure we don’t have a bias issue within our data we have taken into account the global pandemic, and acknowledge that teaching styles have changed dramatically as the majority of classes are currently taken online. Therefore, we decided to only examine data that was available before the pandemic (anything in and before Fall 2019).\n",
     "\n",
     "We have also considered that a review by a student could be dependent on their personal issues and not primarily due to the teacher conducting the course or even the course difficulty.\n",
     "\n",
-    "We understand all these factors can cause bias in our analysis and will take these into account in our final write-up. Although we planned to use a wide range of data, we have tried to ensure we have minimal bias and privacy issues. We believe them to be transparent as we could acquire. Lastly, we don’t anticipate our findings to lead to any negative outcomes."
+    "We understand all these factors can cause bias in our analysis. We have used a wide range of data, and have tried to ensure we have minimal bias and privacy issues. We believe the algorithms used for analysis to be as transparent as we could acquire. Lastly, we don’t anticipate our findings to lead to any negative outcomes."
    ]
   },
   {
@@ -2366,7 +2366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the last several linear regression summaries, we can see that __our defined `difficulty` (`hours` / `gpa_rec`) variable seems to have a overall negative impact over the instructor ratings__. However, __the effect is quite small__, even when compared to the correlation between average GPA and instructor recommendations. Another surprising finding is that, based on the coeffecient of the linear regressions of the three field of study, __the impact of course diffuclty over the instructor rating is actually the highest for social science courses__. This is again different from our hypothesis. Therefore, from our analysis, we believe that we have to __reject our hypothesis__ and accept that under our definition, __course diffculty does not have a significant correlation with instructor rating__, and that even if this correlation exits, __STEM courses do not exhibit the highest correlation__.\n",
+    "From the last several linear regression summaries, we can see that __our defined `difficulty` (`hours` / `gpa_rec`) variable seems to have a overall negative impact over the instructor ratings__. However, __the effect is quite small__, even when compared to the correlation between average GPA and instructor recommendations. Another surprising finding is that, based on the coeffecient of the linear regressions of the three field of study, __the impact of course difficulty over the instructor rating is actually the highest for social science courses__. This is again different from our hypothesis. Therefore, from our analysis, we believe that we have to __reject our hypothesis__ and accept that under our definition, __course diffculty does not have a significant correlation with instructor rating__, and that even if this correlation exits, __STEM courses do not exhibit the highest correlation__.\n",
     "\n",
     "Of course, this finding may be due to the limitations of our analysis. Most significantly, __our definition of difficulty is based on the untested speculation the higher `hours` and lower `gpa_rec` means higher difficulty__. We try to formulate this definition by the data that we have, and there are certainly many other factors that impact the difficulty of a course.\n",
     "\n",
