Change spelling errors, add 3rd limit, change title

--- a/FinalProject_group046.ipynb
+++ b/FinalProject_group046.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Course Difficulty, Instructor Rating, and Fields of Study: a COGS 108 group project"
+    "# Course Difficulty, Instructor Ratings, and Fields of Study: a COGS 108 group project"
    ]
   },
   {
@@ -2330,7 +2330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Althought the coefficient seems to indicate that __difficulty negatively impacts rate of instructor recommendation__, the `R-squared` values and their corresponding __r-value are simply too small__ to suggest any correlation between the two values. Furthermore, the magnitude of the coeffecient in the social science dataset seems to be the highest of the three, which suggests that if the correlation between course difficulty and instructor recommendation exists, it has the largest impact over the field of social science, which is against what we hypothesized. This seems to suggest that we failed to reject the null hypothesis."
+    "Althought the coefficient seems to indicate that __difficulty negatively impacts rate of instructor recommendation__, the `R-squared` values and their corresponding __r-value are simply too small__ to suggest any correlation between the two values. Furthermore, the magnitude of the coefficient in the social science dataset seems to be the highest of the three, which suggests that if the correlation between course difficulty and instructor recommendation exists, it has the largest impact over the field of social science, which is against what we hypothesized. This seems to suggest that we failed to reject the null hypothesis."
    ]
   },
   {
@@ -2366,11 +2366,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the last several linear regression summaries, we can see that __our defined `difficulty` (`hours` / `gpa_rec`) variable seems to have a overall negative impact over the instructor ratings__. However, __the effect is quite small__, even when compared to the correlation between average GPA and instructor recommendations. Another surprising finding is that, based on the coeffecient of the linear regressions of the three field of study, __the impact of course difficulty over the instructor rating is actually the highest for social science courses__. This is again different from our hypothesis. Therefore, from our analysis, we believe that we have to __reject our hypothesis__ and accept that under our definition, __course diffculty does not have a significant correlation with instructor rating__, and that even if this correlation exits, __STEM courses do not exhibit the highest correlation__.\n",
+    "From the last several linear regression summaries, we can see that __our defined `difficulty` (`hours` / `gpa_rec`) variable seems to have a overall negative impact over the instructor ratings__. However, __the effect is quite small__, even when compared to the correlation between average GPA and instructor recommendations. Another surprising finding is that, based on the coefficient of the linear regressions of the three field of study, __the impact of course difficulty over the instructor rating is actually the highest for social science courses__. This is again different from our hypothesis. Therefore, from our analysis, we believe that we have to __reject our hypothesis__ and accept that under our definition, __course diffculty does not have a significant correlation with instructor rating__, and that even if this correlation exits, __STEM courses do not exhibit the highest correlation__.\n",
     "\n",
-    "Of course, this finding may be due to the limitations of our analysis. Most significantly, __our definition of difficulty is based on the untested speculation the higher `hours` and lower `gpa_rec` means higher difficulty__. We try to formulate this definition by the data that we have, and there are certainly many other factors that impact the difficulty of a course.\n",
-    "\n",
-    "Another limitation to our study is that the report from __students are subjective in nature__, so they may not reflect the actual hours spent studying the course, or the actual rating of the instructors. In particular, __a extremely high portion of the courses reports 100% recommendation for the instructor__, which heavily skews the `rec_instr` data. This increases the difficulty of fitting the data in a linear model.\n",
+    "Of course, this finding may be due to the limitations of our analysis. Most significantly, __our definition of difficulty is based on the untested speculation the higher `hours` and lower `gpa_rec` means higher difficulty__. We try to formulate this definition by the data that we have, and there are certainly many other factors that impact the difficulty of a course. Another limitation to our study is that the report from __students are subjective in nature__, so they may not reflect the actual hours spent studying the course, or the actual rating of the instructors. In particular, __a extremely high portion of the courses reports 100% recommendation for the instructor__, which heavily skews the `rec_instr` data. This increases the difficulty of fitting the data in a linear model. Thirdly, as mentioned in the analysis, our data overrepresents STEM courses when compared to the other two fields. The number of observations and instructors are the highest for STEM, second highest for Social Science, and the least for Humanities. This may also create biases in our analysis.\n",
     "\n",
     "Nevertheless, this is a surprising result for us. It seems to suggest that __unlike what we have guessed, students at UCSD are generally not biased by the difficulty of the course when trying to evaluate the teaching performance of their instructors__. Provided that this is true, it is certainly a good thing to see."
    ]
