Update Contribution Tony

--- a/FinalProject_group046.ipynb
+++ b/FinalProject_group046.ipynb
@@ -2386,7 +2386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Cheng (Tony) Chang__ helped establish research question and the (unfortunate) hypothesis. He conducted data cleaning, basic EDA, outlier rejections, and the final correlational analysis. He helped edit the brackground section and the descriptions of the graphs and regression summaries. He also wrote the overview and conclusions of the project."
+    "__Cheng (Tony) Chang__ took part in establishing the research question and the (unfortunate) hypothesis. He conducted data cleaning, basic EDA, outlier rejections, and the final correlational analysis. He edited the brackground section and the descriptions of the graphs and regression summaries, and wrote the overview and conclusions of the project. He also provided maintenance work for the GitHub repository, edited the README and LICENSE, and helped his teammates learning the version control system."
    ]
   }
  ],
