--- a/FinalProject_group046.ipynb
+++ b/FinalProject_group046.ipynb
@@ -2388,6 +2388,34 @@
    "source": [
     "__Cheng (Tony) Chang__ took part in establishing the research question and the (unfortunate) hypothesis. He conducted data cleaning, basic EDA, outlier rejections, and the final correlational analysis. He edited the brackground section and the descriptions of the graphs and regression summaries, and wrote the overview and conclusions of the project. He also provided maintenance work for the GitHub repository, edited the README and LICENSE, and helped his teammates learning the version control system."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Sharon Chen__ helped to extend the scope of the Research Question by suggesting to compare the correlational results of course difficulty and instructors’ ratings between all Social Science, Humanities, & STEM departments. She helped write and conduct a first-draft proofread of the Background & Prior Work section, in addition to the Dataset section. Next, Sharon drafted main points to include in the descriptions corresponding to each scatter matrix in the EDA section. Finally, she provided the code to generate each OLS report within the “Correlation of Interests” section.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Pamela Ghag__ wrote the Ethics & Privacy section as well the Dataset section. She also added descriptions for the scatter plots and for the OLS Regression Results (located in the Correlations of Interests section). Pamela also helped write the descriptions for the histograms in the EDA section. She also formatted the powerpoint and wrote the script for the video that went along with the powerpoint."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Yuzi Chu__ wrote the first-draft Background and Prior Work section and conducted part of the EDA section. She also provides code for data visualization by generating scatter matrices and comparative histograms. Additionally, she updated the color of graphs to make them more readable and colorblind-friendly. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Stanley Hahm__ provided the dataset Seascape for the project. He also helped write the Dataset section by deciding the observations used and how this project will measure difficulty. Moreover, Stanley wrote the script for dividing up the classes to their respective departments and initiated the analysis by writing early scripts of our graphs explaining if gpa_rec and rec_instr had a positive correlation amongst each department. Finally, he was able to edit the video and powerpoint used in the final presentation of the group project. "
+   ]
   }
  ],
  "metadata": {
@@ -2406,7 +2434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
